--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,45 +1,53 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="app_name">WootzViewTest</string>
 
-    <string name="lorem_ipsum">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
-        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
-        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
-        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
-        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
-        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
-        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
-        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
-        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
-        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
-        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
-        bibendum, vel congue leo egestas.\n\n
-        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
-        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
-        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
-        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
-        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
-        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
-        est.\n\n
-        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
-        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
-        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
-        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
-        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
-        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
-        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
-        convallis.\n\n
-        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
-        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
-        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
-        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
-        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
-        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
-    </string>
+    <!-- Text selection action mode strings -->
+    <string name="actionbar_share">Share</string>
+    <string name="actionbar_web_search">Web search</string>
+    <string name="copy_to_clipboard">Copy</string>
+    <string name="paste_from_clipboard">Paste</string>
+    <string name="cut_to_clipboard">Cut</string>
+    <string name="select_all">Select all</string>
+
+    <!-- Additional required strings for text selection -->
+    <string name="copy">Copy</string>
+    <string name="paste">Paste</string>
+    <string name="cut">Cut</string>
+
+    <!-- Error messages -->
+    <string name="low_memory_error">There is not enough memory available to complete the previous operation.</string>
+    <string name="opening_file_error">Failed to open selected file.</string>
+    <string name="copy_to_clipboard_failure_message">Failed to copy to clipboard</string>
+
+    <!-- Color picker strings (if using color input) -->
+    <string name="color_picker_button_more">More</string>
+    <string name="color_picker_hue">Hue</string>
+    <string name="color_picker_saturation">Saturation</string>
+    <string name="color_picker_value">Value</string>
+    <string name="color_picker_button_set">Set</string>
+    <string name="color_picker_button_cancel">Cancel</string>
+    <string name="color_picker_dialog_title">Choose a color</string>
+
+    <!-- Date/Time picker strings -->
+    <string name="date_picker_dialog_title">Set date</string>
+    <string name="time_picker_dialog_title">Set time</string>
+    <string name="date_time_picker_dialog_title">Set date and time</string>
+    <string name="month_picker_dialog_title">Set month</string>
+    <string name="week_picker_dialog_title">Set week</string>
+    <string name="date_picker_dialog_set">Set</string>
+    <string name="date_picker_dialog_clear">Clear</string>
+
+    <!-- Media player strings -->
+    <string name="media_player_error_text_invalid_progressive_playback">This video is not valid for streaming to this device</string>
+    <string name="media_player_error_text_unknown">Unknown media player error</string>
+    <string name="media_player_error_button">OK</string>
+    <string name="media_player_loading_video">Loading video…</string>
+
+    <!-- Accessibility strings -->
+    <string name="accessibility_content_view">Content view</string>
+    <string name="accessibility_date_picker_month">Month</string>
+    <string name="accessibility_date_picker_week">Week</string>
+    <string name="accessibility_date_picker_year">Year</string>
+    <string name="accessibility_datetime_picker_date">Date</string>
+    <string name="accessibility_datetime_picker_time">Time</string>
 </resources>
